Update Lesson 02 for contrast issue.

--- a/lesson02/styles/base.css
+++ b/lesson02/styles/base.css
@@ -26,7 +26,7 @@ section {
   padding: 10px;
   border-style: solid;
   border-width: 3px;
-  background-color: rgb(222, 222, 222);
+  background-color:  #E6E6E3; /* rgb(222, 222, 222);*/
   border-radius: 15px;
 }
 h3 {
